[gd_scene load_steps=10 format=3 uid="uid://biwejrwd45g86"]

[ext_resource type="Script" path="res://Tower/tower.gd" id="1_7texy"]
[ext_resource type="PackedScene" uid="uid://b6r2ipx54aspv" path="res://Tower/projectile.tscn" id="1_mqoe6"]

[sub_resource type="CylinderMesh" id="CylinderMesh_yycvx"]
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_eoatb"]
top_radius = 0.6
bottom_radius = 0.6
height = 0.6

[sub_resource type="CylinderMesh" id="CylinderMesh_u5d1v"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_xn2bw"]
size = Vector3(0.4, 0.2, 0.2)

[sub_resource type="Animation" id="Animation_low1p"]
resource_name = "fire"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TowerBase/TowerTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.3, -0.6), Vector3(0, 0.3, -0.3), Vector3(0, 0.3, 0)]
}

[sub_resource type="Animation" id="Animation_toy0n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TowerBase/TowerTop:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.3, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_opvgk"]
_data = {
"RESET": SubResource("Animation_toy0n"),
"fire": SubResource("Animation_low1p")
}

[node name="Tower" type="Node3D"]
script = ExtResource("1_7texy")
projectile = ExtResource("1_mqoe6")

[node name="TowerBase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CylinderMesh_yycvx")

[node name="TowerTop" type="MeshInstance3D" parent="TowerBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
mesh = SubResource("CylinderMesh_eoatb")

[node name="CenterBarrel" type="MeshInstance3D" parent="TowerBase"]
transform = Transform3D(1, 0, 0, 0, 0.0335215, -0.999438, 0, 0.999438, 0.0335215, 0, 0.335802, 0.769659)
mesh = SubResource("CylinderMesh_u5d1v")

[node name="LeftBarrel" type="MeshInstance3D" parent="TowerBase"]
transform = Transform3D(1, 0, 0, 0, 0.0335215, -0.999438, 0, 0.999438, 0.0335215, -0.2, 0.3, 0.6)
mesh = SubResource("CylinderMesh_u5d1v")

[node name="RightBarrel" type="MeshInstance3D" parent="TowerBase"]
transform = Transform3D(1, 0, 0, 0, 0.0335215, -0.999438, 0, 0.999438, 0.0335215, 0.2, 0.3, 0.6)
mesh = SubResource("CylinderMesh_u5d1v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="TowerBase"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.46414, 0.536543)
mesh = SubResource("BoxMesh_xn2bw")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_opvgk")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
